Add tests for critical thread pools